--- a/public/team.html
+++ b/public/team.html
@@ -806,6 +806,17 @@
                 Relecture, tests et documentation. Il s'est assuré que TAKTO
                 soit fiable et bien documenté.
               </li>
+              <li
+                style="
+                  background: var(--secondary);
+                  border-radius: var(--radius);
+                  padding: 1.2rem 1.5rem;
+                  border: 1px solid var(--border-highlight);
+                "
+              >
+                <strong>Yanis</strong> <span aria-hidden="true">😏</span> —
+                Etablissement du débbogage de l'application.
+              </li>
             </ul>
             <p>
               Merci à tous pour votre implication et votre bonne humeur tout au
