fix:footer style tweaks

--- a/public/readme.html
+++ b/public/readme.html
@@ -1276,9 +1276,16 @@ python3 -m http.server 8000
         </main>
       </div>
       <footer>
-        <p>
-          &copy; 2024 TAKTO. Projet open source pour la veille technologique.
-        </p>
+        <div class="footer-info">
+          <span>&copy; 2025 TAKTO</span>
+          <span class="footer-credits"
+            >Projet open source <span aria-hidden="true">🌱</span> pour la
+            veille technologique.</span
+          >
+        </div>
+        <div class="footer-credits">
+          Fait avec <span aria-hidden="true">❤️</span> par l'équipe TAKTO
+        </div>
       </footer>
     </div>
     <script src="js/app.js" defer></script>
