minor : accecibility optimisations

--- a/public/accessibility.html
+++ b/public/accessibility.html
@@ -84,6 +84,7 @@
             >
               <span id="theme-toggle-icon" aria-hidden="true">🌙</span>
             </button>
+            <!-- NOTE: aria-checked doit être mis à jour dynamiquement en JS selon le thème (true/false) -->
           </div>
         </div>
       </header>
