--- a/public/index.html
+++ b/public/index.html
@@ -1005,11 +1005,7 @@
               </p>
             </div>
           </section>
-          <section
-            id="js-features"
-            class="js-only app-section"
-            aria-hidden="true"
-          >
+          <section id="js-features" class="js-only app-section">
             <!-- JS features (ajout de liens, recherche, etc.) -->
           </section>
         </main>
