minor: accessibilities optimisations

--- a/public/faq.html
+++ b/public/faq.html
@@ -7,9 +7,9 @@
       name="description"
       content="TAKTO - FAQ du projet de veille technologique."
     />
-    <link rel="icon" href="favicon.ico" />
+    <link rel="icon" href="./favicon.ico" />
     <link rel="manifest" href="manifest.json" />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>TAKTO - FAQ</title>
     <meta property="og:title" content="TAKTO - FAQ" />
     <meta
@@ -17,7 +17,7 @@
       content="FAQ du projet de veille technologique TAKTO."
     />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="TAKTO BLACK.svg" />
+    <meta property="og:image" content="./TAKTO BLACK.svg" />
     <meta property="og:url" content="https://takto.vercel.app/faq.html" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="TAKTO - FAQ" />
@@ -25,7 +25,7 @@
       name="twitter:description"
       content="FAQ du projet de veille technologique TAKTO."
     />
-    <meta name="twitter:image" content="TAKTO BLACK.svg" />
+    <meta name="twitter:image" content="./TAKTO BLACK.svg" />
   </head>
   <body>
     <noscript>
@@ -49,7 +49,7 @@
         <div class="header-content">
           <a href="index.html" class="logo-link" aria-label="Accueil TAKTO">
             <img
-              src="TAKTO BLACK.svg"
+              src="./TAKTO BLACK.svg"
               alt="Logo TAKTO"
               width="90"
               height="44"
