--- a/public/readme.html
+++ b/public/readme.html
@@ -7,8 +7,8 @@
       name="description"
       content="TAKTO - Readme du projet de veille technologique."
     />
-    <link rel="icon" href="favicon.ico" />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="icon" href="./favicon.ico" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>TAKTO - Readme</title>
     <meta property="og:title" content="TAKTO - Readme" />
     <meta
@@ -16,7 +16,7 @@
       content="Readme du projet de veille technologique TAKTO."
     />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="TAKTO BLACK.svg" />
+    <meta property="og:image" content="./TAKTO BLACK.svg" />
     <meta property="og:url" content="https://takto.vercel.app/readme.html" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="TAKTO - Readme" />
@@ -24,7 +24,7 @@
       name="twitter:description"
       content="Readme du projet de veille technologique TAKTO."
     />
-    <meta name="twitter:image" content="TAKTO BLACK.svg" />
+    <meta name="twitter:image" content="./TAKTO BLACK.svg" />
   </head>
   <body>
     <noscript>
@@ -48,7 +48,7 @@
         <div class="header-content">
           <a href="index.html" class="logo-link" aria-label="Accueil TAKTO">
             <img
-              src="TAKTO BLACK.svg"
+              src="./TAKTO BLACK.svg"
               alt="Logo TAKTO"
               width="90"
               height="44"
@@ -69,7 +69,6 @@
             <button
               id="theme-toggle-btn"
               aria-label="Basculer le thème"
-              title="Basculer le thème"
               type="button"
               role="switch"
               aria-checked="false"
@@ -1288,6 +1287,16 @@ python3 -m http.server 8000
         </div>
       </footer>
     </div>
-    <script src="js/app.js" defer></script>
+    <script src="./js/app.js" defer></script>
+    <div
+      class="sidebar-resize-handle"
+      role="separator"
+      aria-orientation="vertical"
+      aria-valuenow="300"
+      aria-valuemin="220"
+      aria-valuemax="600"
+      aria-label="Redimensionner la barre latérale"
+      tabindex="0"
+    ></div>
   </body>
 </html>
