--- a/public/accessibility.html
+++ b/public/accessibility.html
@@ -7,9 +7,9 @@
       name="description"
       content="TAKTO - Accessibilité du projet de veille technologique."
     />
-    <link rel="icon" href="favicon.ico" />
+    <link rel="icon" href="./favicon.ico" />
     <link rel="manifest" href="manifest.json" />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>TAKTO - Accessibilité</title>
     <meta property="og:title" content="TAKTO - Accessibilité" />
     <meta
@@ -17,7 +17,7 @@
       content="Accessibilité du projet de veille technologique TAKTO."
     />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="TAKTO BLACK.svg" />
+    <meta property="og:image" content="./TAKTO BLACK.svg" />
     <meta
       property="og:url"
       content="https://takto.vercel.app/accessibility.html"
@@ -28,7 +28,7 @@
       name="twitter:description"
       content="Accessibilité du projet de veille technologique TAKTO."
     />
-    <meta name="twitter:image" content="TAKTO BLACK.svg" />
+    <meta name="twitter:image" content="./TAKTO BLACK.svg" />
   </head>
   <body>
     <noscript>
@@ -52,7 +52,7 @@
         <div class="header-content">
           <a href="index.html" class="logo-link" aria-label="Accueil TAKTO">
             <img
-              src="TAKTO BLACK.svg"
+              src="./TAKTO BLACK.svg"
               alt="Logo TAKTO"
               width="90"
               height="44"
@@ -77,7 +77,6 @@
             <button
               id="theme-toggle-btn"
               aria-label="Basculer le thème"
-              title="Basculer le thème"
               type="button"
               role="switch"
               aria-checked="false"
@@ -888,6 +887,16 @@
         </div>
       </footer>
     </div>
-    <script src="js/app.js" defer></script>
+    <script src="./js/app.js" defer></script>
+    <div
+      class="sidebar-resize-handle"
+      role="separator"
+      aria-orientation="vertical"
+      aria-valuenow="300"
+      aria-valuemin="220"
+      aria-valuemax="600"
+      aria-label="Redimensionner la barre latérale"
+      tabindex="0"
+    ></div>
   </body>
 </html>
