minor : fixed optimizations issues

--- a/public/accessibility.html
+++ b/public/accessibility.html
@@ -740,7 +740,9 @@
           role="main"
         >
           <section class="content-section">
-            <h2>Accessibilité <span aria-hidden="true">♿</span></h2>
+            <h1 style="font-size: 2rem">
+              Accessibilité <span aria-hidden="true">♿</span>
+            </h1>
             <p>
               TAKTO a été conçu dès le départ pour être accessible à tous, quels
               que soient les besoins ou les outils utilisés.
