--- a/public/index.html
+++ b/public/index.html
@@ -965,7 +965,7 @@
           role="main"
         >
           <section class="content-section">
-            <h2>Bienvenue sur TAKTO</h2>
+            <h1 style="font-size: 2rem">Bienvenue sur TAKTO</h1>
             <p>
               Tableau de veille technologique minimaliste et accessible pour
               développeurs.
