--- a/public/readme.html
+++ b/public/readme.html
@@ -977,7 +977,7 @@
           role="main"
         >
           <section class="content-section">
-            <h1>TAKTO</h1>
+            <h1 style="font-size: 2rem">TAKTO</h1>
             <blockquote>
               <strong>TAKTO</strong> est un tableau de veille technologique
               minimaliste, accessible et statique, inspiré par Notion, conçu
