--- a/public/team.html
+++ b/public/team.html
@@ -729,7 +729,9 @@
           role="main"
         >
           <section class="content-section">
-            <h2>L'équipe TAKTO <span aria-hidden="true">👥</span></h2>
+            <h1 style="font-size: 2rem">
+              L'équipe TAKTO <span aria-hidden="true">👥</span>
+            </h1>
             <p>
               TAKTO est un projet scolaire collaboratif, imaginé et réalisé par
               cinq étudiants passionnés. Chacun a apporté sa propre expertise et
