--- a/public/faq.html
+++ b/public/faq.html
@@ -70,7 +70,6 @@
             <button
               id="theme-toggle-btn"
               aria-label="Basculer le thème"
-              title="Basculer le thème"
               type="button"
               role="switch"
               aria-checked="false"
@@ -730,7 +729,9 @@
           role="main"
         >
           <section class="content-section">
-            <h2>FAQ <span aria-hidden="true">❓</span></h2>
+            <h1 style="font-size: 2rem">
+              FAQ <span aria-hidden="true">❓</span>
+            </h1>
             <p>
               Bienvenue dans la FAQ de TAKTO ! Retrouvez ici les réponses aux
               questions fréquentes sur le projet, son accessibilité et son
@@ -810,6 +811,16 @@
         </div>
       </footer>
     </div>
+    <div
+      class="sidebar-resize-handle"
+      role="separator"
+      aria-orientation="vertical"
+      aria-valuenow="300"
+      aria-valuemin="220"
+      aria-valuemax="600"
+      aria-label="Redimensionner la barre latérale"
+      tabindex="0"
+    ></div>
     <script src="js/app.js" defer></script>
   </body>
 </html>
